--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">CollectorApp</string>
+    <string name="title_activity_second">SecondActivity</string>
+    <string name="add_item">Adicionar</string>
 </resources>
